Major rewrite of whole system to switch from MongoDB to PostgreSQL (#13)
