# services/api/routes.go
@@ -6,75 +6,76 @@
 package main
 
 import (
-	"context"
+	"database/sql"
 	"encoding/json"
 	"errors"
 	"log"
-	"nanomon/services/common/types"
+	"nanomon/services/common/monitor"
+	"nanomon/services/common/result"
 	"net/http"
 	"strconv"
 	"time"
 
 	"github.com/benc-uk/go-rest-api/pkg/problem"
 	"github.com/go-chi/chi/v5"
-	"go.mongodb.org/mongo-driver/bson"
-	"go.mongodb.org/mongo-driver/bson/primitive"
-	"go.mongodb.org/mongo-driver/mongo/options"
 )
 
 // Get all monitors
 func (api API) getMonitors(resp http.ResponseWriter, req *http.Request) {
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	cur, err := api.db.Monitors.Find(timeoutCtx, bson.M{})
+	// Fetch all monitors from the database
+	monitors, err := monitor.FetchMonitors(api.db)
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
 
-	monitors := make([]*MonitorResp, 0)
-
-	for cur.Next(context.TODO()) {
-		m := &MonitorResp{}
-		if err := cur.Decode(&m); err != nil {
-			problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
-			return
-		}
-
-		monitors = append(monitors, m)
+	monitorResps := make([]MonitorResp, len(monitors))
+	for i, mon := range monitors {
+		monitorResps[i] = MonitorToResp(mon)
 	}
 
-	api.ReturnJSON(resp, monitors)
+	api.ReturnJSON(resp, monitorResps)
 }
 
 // Get a single monitor
 func (api API) getMonitor(resp http.ResponseWriter, req *http.Request) {
-	oidStr := chi.URLParam(req, "id")
-	oid, err := primitive.ObjectIDFromHex(oidStr)
-
+	id := chi.URLParam(req, "id")
+	// Convert to int
+	idInt, err := strconv.Atoi(id)
 	if err != nil {
 		problem.Wrap(400, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	m := &MonitorResp{}
-
-	err = api.db.Monitors.FindOne(timeoutCtx, bson.M{"_id": oid}).Decode(m)
-	if err != nil {
-		problem.Wrap(404, req.RequestURI, "monitors", err).Send(resp)
+	// Fetch the monitor from the database
+	mon, err := monitor.FetchMonitor(api.db, idInt)
+	if errors.Is(err, sql.ErrNoRows) {
+		problem.Wrap(404, req.RequestURI, "monitors", errors.New("monitor not found")).Send(resp)
 		return
 	}
 
-	api.ReturnJSON(resp, m)
+	if err != nil {
+		problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
+		return
+	}
+
+	if mon == nil {
+		problem.Wrap(404, req.RequestURI, "monitors", errors.New("monitor not found")).Send(resp)
+		return
+	}
+
+	api.ReturnJSON(resp, MonitorToResp(mon))
 }
 
 // Get results for monitor with id
 func (api API) getMonitorResults(resp http.ResponseWriter, req *http.Request) {
-	oidStr := chi.URLParam(req, "id")
+	id := chi.URLParam(req, "id")
+	// Convert to int
+	idInt, err := strconv.Atoi(id)
+	if err != nil {
+		problem.Wrap(400, req.RequestURI, "monitors", err).Send(resp)
+		return
+	}
 
 	// Url query max param
 	maxStr := req.URL.Query().Get("max")
@@ -93,34 +94,14 @@ func (api API) getMonitorResults(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	// parse oidstr to oid
-	oid, err := primitive.ObjectIDFromHex(oidStr)
-	if err != nil {
-		problem.Wrap(400, req.RequestURI, "results", err).Send(resp)
-		return
-	}
-
-	options := options.Find().SetSort(bson.M{"date": -1}).SetLimit(int64(max))
-
-	cur, err := api.db.Results.Find(timeoutCtx, bson.M{"monitor_id": oid}, options)
+	results, err := result.GetResultsForMonitor(api.db, idInt, max)
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "results", err).Send(resp)
 		return
 	}
 
-	results := make([]*types.Result, 0)
-
-	for cur.Next(context.TODO()) {
-		r := &types.Result{}
-		if err := cur.Decode(&r); err != nil {
-			problem.Wrap(500, req.RequestURI, "results", err).Send(resp)
-			return
-		}
-
-		results = append(results, r)
+	if results == nil {
+		results = []*result.Result{}
 	}
 
 	api.ReturnJSON(resp, results)
@@ -128,34 +109,31 @@ func (api API) getMonitorResults(resp http.ResponseWriter, req *http.Request) {
 
 // Delete a monitor
 func (api API) deleteMonitor(resp http.ResponseWriter, req *http.Request) {
-	oidStr := chi.URLParam(req, "id")
-
-	oid, err := primitive.ObjectIDFromHex(oidStr)
+	id := chi.URLParam(req, "id")
+	// Convert to int
+	idInt, err := strconv.Atoi(id)
 	if err != nil {
 		problem.Wrap(400, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
+	// Fetch the monitor from the database
+	err = monitor.DeleteMonitor(idInt, api.db)
+	if errors.Is(err, sql.ErrNoRows) {
+		problem.Wrap(404, req.RequestURI, "monitors", errors.New("monitor not found")).Send(resp)
+		return
+	}
 
-	deleteResp, err := api.db.Monitors.DeleteOne(timeoutCtx, bson.M{"_id": oid})
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
 
-	if deleteResp.DeletedCount == 0 {
-		problem.Wrap(404, req.RequestURI, "monitors", errors.New("monitor not found")).Send(resp)
-		return
-	}
-
-	resp.WriteHeader(204)
+	resp.WriteHeader(http.StatusNoContent) // 204 No Content
 }
 
 // Create a new monitor
 func (api API) createMonitor(resp http.ResponseWriter, req *http.Request) {
-	// get body and encode to struct
 	m := MonitorReq{}
 
 	err := json.NewDecoder(req.Body).Decode(&m)
@@ -169,21 +147,10 @@ func (api API) createMonitor(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	log.Printf("### Creating monitor %+v", m)
+	log.Printf("Creating monitor %+v", m)
 	m.Updated = time.Now()
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	insertRes, err := api.db.Monitors.InsertOne(timeoutCtx, m)
-	if err != nil {
-		problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
-		return
-	}
-
-	oid, _ := insertRes.InsertedID.(primitive.ObjectID)
-	respMonitor := MonitorResp{
-		ID:         oid.Hex(),
+	monitor := &monitor.Monitor{
 		Name:       m.Name,
 		Type:       m.Type,
 		Target:     m.Target,
@@ -192,7 +159,22 @@ func (api API) createMonitor(resp http.ResponseWriter, req *http.Request) {
 		Updated:    m.Updated,
 		Enabled:    m.Enabled,
 		Properties: m.Properties,
-		Group:      m.Group,
+	}
+
+	err = monitor.Store(api.db)
+	if err != nil {
+		problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
+		return
+	}
+
+	respMonitor := MonitorResp{
+		ID:         monitor.ID,
+		Name:       m.Name,
+		Type:       m.Type,
+		Interval:   m.Interval,
+		Updated:    m.Updated,
+		Enabled:    m.Enabled,
+		Properties: m.Properties,
 	}
 
 	api.ReturnJSON(resp, respMonitor)
@@ -200,15 +182,14 @@ func (api API) createMonitor(resp http.ResponseWriter, req *http.Request) {
 
 // Update existing monitor with a PUT request and upsert into the DB
 func (api API) updateMonitor(resp http.ResponseWriter, req *http.Request) {
-	oidStr := chi.URLParam(req, "id")
-
-	oid, err := primitive.ObjectIDFromHex(oidStr)
+	id := chi.URLParam(req, "id")
+	// Convert to int
+	idInt, err := strconv.Atoi(id)
 	if err != nil {
 		problem.Wrap(400, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
 
-	// get body and encode to struct
 	m := MonitorReq{}
 
 	err = json.NewDecoder(req.Body).Decode(&m)
@@ -222,27 +203,38 @@ func (api API) updateMonitor(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	log.Printf("### Updating monitor %+v", m)
 	m.Updated = time.Now()
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
+	log.Printf("Monitor properties: %+v", m.Target)
 
-	updateResp, err := api.db.Monitors.ReplaceOne(timeoutCtx, bson.M{"_id": oid}, m)
+	monitor := &monitor.Monitor{
+		ID:         idInt,
+		Name:       m.Name,
+		Type:       m.Type,
+		Target:     m.Target,
+		Rule:       m.Rule,
+		Interval:   m.Interval,
+		Updated:    m.Updated,
+		Enabled:    m.Enabled,
+		Properties: m.Properties,
+	}
+
+	err = monitor.Update(api.db)
+	if errors.Is(err, sql.ErrNoRows) {
+		problem.Wrap(404, req.RequestURI, "monitors", errors.New("monitor not found")).Send(resp)
+		return
+	}
+
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
 
-	if updateResp.MatchedCount == 0 {
-		problem.Wrap(404, req.RequestURI, "monitors", errors.New("monitor not found")).Send(resp)
-		return
-	}
-
 	respMonitor := MonitorResp{
-		ID:         oidStr,
+		ID:         monitor.ID,
 		Name:       m.Name,
 		Type:       m.Type,
+		Target:     m.Target,
 		Interval:   m.Interval,
 		Updated:    m.Updated,
 		Enabled:    m.Enabled,
@@ -271,27 +263,14 @@ func (api API) getResults(resp http.ResponseWriter, req *http.Request) {
 		return
 	}
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	options := options.Find().SetSort(bson.M{"date": -1}).SetLimit(int64(max))
-
-	cur, err := api.db.Results.Find(timeoutCtx, bson.M{}, options)
+	results, err := result.GetResults(api.db, max)
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "results", err).Send(resp)
 		return
 	}
 
-	results := make([]types.Result, 0)
-
-	for cur.Next(context.TODO()) {
-		r := types.Result{}
-		if err := cur.Decode(&r); err != nil {
-			problem.Wrap(500, req.RequestURI, "results", err).Send(resp)
-			return
-		}
-
-		results = append(results, r)
+	if results == nil {
+		results = []*result.Result{}
 	}
 
 	api.ReturnJSON(resp, results)
@@ -299,89 +278,70 @@ func (api API) getResults(resp http.ResponseWriter, req *http.Request) {
 
 // Import JSON to bulk configure monitors
 func (api API) importMonitors(resp http.ResponseWriter, req *http.Request) {
-	log.Printf("### Importing monitors")
+	log.Printf("Importing monitors from request body")
 
-	monitors := []*MonitorReq{}
+	var monitors []MonitorReq
 
 	err := json.NewDecoder(req.Body).Decode(&monitors)
 	if err != nil {
-		problem.Wrap(400, req.RequestURI, "import", err).Send(resp)
+		problem.Wrap(400, req.RequestURI, "monitors", err).Send(resp)
 		return
 	}
-
-	if len(monitors) == 0 {
-		problem.Wrap(400, req.RequestURI, "import", errors.New("no monitors in import")).Send(resp)
-		return
-	}
-
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	deleteResp, err := api.db.Monitors.DeleteMany(timeoutCtx, bson.M{})
-	if err != nil {
-		problem.Wrap(500, req.RequestURI, "import", err).Send(resp)
-		return
-	}
-
-	log.Printf("### Removed %d existing monitors", deleteResp.DeletedCount)
 
 	for _, m := range monitors {
-		m.Updated = time.Now()
-
-		// Fix for properties being null/empty/weird
-		if len(m.Properties) == 0 {
-			m.Properties = make(map[string]string)
-		}
-
 		if msg, ok := m.validate(); !ok {
 			problem.Wrap(400, req.RequestURI, "monitors", errors.New(msg)).Send(resp)
 			return
 		}
 
-		_, err := api.db.Monitors.InsertOne(timeoutCtx, m)
+		monitor := &monitor.Monitor{
+			Name:       m.Name,
+			Type:       m.Type,
+			Target:     m.Target,
+			Rule:       m.Rule,
+			Interval:   m.Interval,
+			Updated:    time.Now(),
+			Enabled:    m.Enabled,
+			Properties: m.Properties,
+		}
+
+		err = monitor.Store(api.db)
 		if err != nil {
-			problem.Wrap(500, req.RequestURI, "import", err).Send(resp)
+			problem.Wrap(500, req.RequestURI, "monitors", err).Send(resp)
 			return
 		}
 
-		log.Printf("### Imported monitor %s", m.Name)
+		log.Printf("Imported monitor ID %d: %+v", monitor.ID, m)
 	}
 
-	resp.WriteHeader(204)
+	log.Printf("Imported %d monitors successfully", len(monitors))
+	resp.WriteHeader(http.StatusNoContent)
 }
 
 // Reset and remove all monitors
 func (api API) deleteMonitors(resp http.ResponseWriter, req *http.Request) {
-	log.Printf("### Resetting and deleting all monitors")
+	log.Printf("Resetting and deleting all monitors")
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	deleteResp, err := api.db.Monitors.DeleteMany(timeoutCtx, bson.M{})
+	err := monitor.DeleteAll(api.db)
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "delete-all", err).Send(resp)
 		return
 	}
 
-	log.Printf("### Removed %d monitors", deleteResp.DeletedCount)
-
-	resp.WriteHeader(204)
+	log.Printf("Removed all monitors")
+	resp.WriteHeader(http.StatusNoContent)
 }
 
 // Reset and remove all results
 func (api API) deleteResults(resp http.ResponseWriter, req *http.Request) {
-	log.Printf("### Resetting and deleting all results")
+	log.Printf("Resetting and deleting all results")
 
-	timeoutCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
-	defer cancel()
-
-	deleteResp, err := api.db.Results.DeleteMany(timeoutCtx, bson.M{})
+	err := result.DeleteAll(api.db)
 	if err != nil {
 		problem.Wrap(500, req.RequestURI, "delete-all", err).Send(resp)
 		return
 	}
 
-	log.Printf("### Removed %d results", deleteResp.DeletedCount)
-
-	resp.WriteHeader(204)
+	log.Printf("Removed all results")
+	resp.WriteHeader(http.StatusNoContent)
 }
